k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: persons-finder
  labels:
    app.kubernetes.io/name: persons-finder
    app.kubernetes.io/part-of: persons-finder
    app.kubernetes.io/managed-by: kubectl
