k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: persons-finder
  namespace: persons-finder
  labels:
    app: persons-finder
spec:
  type: ClusterIP
  selector:
    app: persons-finder
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
